demo-api1/bluegreen/demo-api1-svc-preview.yaml
######### 
# Service
#########


apiVersion: v1
kind: Service
metadata:
  name: demo-api1-preview
  namespace: api
  labels:
    app: demo-api1
spec:
  selector:
    app: demo-api1
  
  ports:
  - protocol: TCP
    name: http
    port: 9009
    targetPort: http
#    nodePort: 30001
#  type: LoadBalancer
